# triangles3D

./: .gitignore  CMakeLists.txt  README.md
geometry/: CMakeLists.txt  float.hh  line.hh  plane.hh  point.hh  segment.hh  triangle.hh
include/: float.hh  line.hh  plane.hh  point.hh  segment.hh  triangle.hh
src/: main.cc
tests/: geometry_test.cc  tests.cc
